--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-*.jpg filter=lfs diff=lfs merge=lfs -text
-media/*.png filter=lfs diff=lfs merge=lfs -text
+public/maps/*.png filter=lfs diff=lfs merge=lfs -text
+media/8-parachute-skydiver-silhouette-5.png filter=lfs diff=lfs merge=lfs -text
