--- a/package.json
+++ b/package.json
@@ -1,21 +1,46 @@
 {
-    "name": "spotten",
-    "version": "1.0.0",
-    "description": "Skydiving exit-point calculator",
-    "main": "index.js",
-    "scripts": {
-        "build": "cp -r web build",
-        "test": "echo TODO: Run tests here"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/johan13/spotten.git"
-    },
-    "keywords": [],
-    "author": "Johan Levin <johan13@gmail.com>",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/johan13/spotten/issues"
-    },
-    "devDependencies": {}
+  "name": "spotten",
+  "version": "0.1.0",
+  "private": true,
+  "description": "Skydiving exit-point calculator",
+  "author": "Johan Levin <johan13@gmail.com>",
+  "license": "MIT",
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^12.20.13",
+    "@types/react": "^17.0.6",
+    "@types/react-dom": "^17.0.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.2.4",
+    "web-vitals": "^1.1.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
