--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "author": "Johan Levin <johan13@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/blob-stream": "^0.1.30",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.13",
+    "@types/pdfkit": "^0.11.0",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "blob-stream": "^0.1.3",
+    "pdfkit": "^0.12.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
