--- a/package.json
+++ b/package.json
@@ -1,52 +1,38 @@
 {
-  "name": "spotten",
-  "version": "0.1.0",
-  "private": true,
-  "description": "Skydiving exit-point calculator",
-  "author": "Johan Levin <johan13@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/blob-stream": "^0.1.30",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^12.20.13",
-    "@types/pdfkit": "^0.11.0",
-    "@types/react": "^17.0.6",
-    "@types/react-dom": "^17.0.5",
-    "blob-stream": "^0.1.3",
-    "pdfkit": "^0.12.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.2.4",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "spotten",
+    "private": true,
+    "description": "Skydiving exit-point calculator",
+    "author": "Johan Levin <johan13@gmail.com>",
+    "license": "MIT",
+    "scripts": {
+        "build": "rm -rf dist && NODE_ENV=production webpack",
+        "start": "webpack serve"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@fontsource/roboto": "^5.0.7",
+        "@mui/icons-material": "^5.14.3",
+        "@mui/material": "^5.14.3",
+        "blob-stream": "^0.1.3",
+        "pdfkit": "^0.13.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "@types/blob-stream": "^0.1.30",
+        "@types/pdfkit": "^0.12.10",
+        "@types/react": "^18.2.18",
+        "@types/react-dom": "^18.2.7",
+        "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.8.1",
+        "html-webpack-plugin": "^5.5.3",
+        "style-loader": "^3.3.3",
+        "ts-loader": "^9.4.4",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.6",
+        "webpack": "^5.88.2",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1"
+    }
 }
